--- a/server/views/includes/style.pug
+++ b/server/views/includes/style.pug
@@ -1,1 +1,1 @@
-link(href='https://cdn.bootcss.com/bootstrap/4.0.0-bate.2/css/bootstrap.min.css' rel='stylesheet')
+link(href='https://cdn.bootcss.com/twitter-bootstrap/4.1.3/css/bootstrap.min.css' rel='stylesheet')
