新增预告片详情页的爬取

--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -27,23 +27,23 @@ block content
         .container
             .row
                 .card
-                    img(src='http://pic.uuhy.com/uploads/2013/02/20/005-stunning-cityscapes-martin-stavars.jpg', data-toggle='modal', data-target='#myModal', data-video='./includes/10 1-2.mp4')
+                    img(src='http://pic.uuhy.com/uploads/2013/02/20/005-stunning-cityscapes-martin-stavars.jpg', data-toggle='modal', data-target='#myModal', data-video='http://vt1.doubanio.com/201811231248/f6ca28f68fbc1d60199285b474d7e17f/view/movie/M/402330315.mp4')
                     p.card-text This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
                 .card
-                    img(src='http://pic.uuhy.com/uploads/2013/02/20/005-stunning-cityscapes-martin-stavars.jpg', data-toggle='modal', data-target='#myModal', data-video='./includes/10 1-2.mp4')
+                    img(src='http://pic.uuhy.com/uploads/2013/02/20/005-stunning-cityscapes-martin-stavars.jpg', data-toggle='modal', data-target='#myModal', data-video='http://vt1.doubanio.com/201811231248/f6ca28f68fbc1d60199285b474d7e17f/view/movie/M/402330315.mp4')
                     p.card-text This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
                 .card
-                    img(src='http://pic.uuhy.com/uploads/2013/02/20/005-stunning-cityscapes-martin-stavars.jpg', data-toggle='modal', data-target='#myModal', data-video='./includes/10 1-2.mp4')
+                    img(src='http://pic.uuhy.com/uploads/2013/02/20/005-stunning-cityscapes-martin-stavars.jpg', data-toggle='modal', data-target='#myModal', data-video='http://vt1.doubanio.com/201811231248/f6ca28f68fbc1d60199285b474d7e17f/view/movie/M/402330315.mp4')
                     p.card-text This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
                 .card
-                    img(src='http://pic.uuhy.com/uploads/2013/02/20/005-stunning-cityscapes-martin-stavars.jpg', data-toggle='modal', data-target='#myModal', data-video='./includes/10 1-2.mp4')
+                    img(src='http://pic.uuhy.com/uploads/2013/02/20/005-stunning-cityscapes-martin-stavars.jpg', data-toggle='modal', data-target='#myModal', data-video='http://vt1.doubanio.com/201811231248/f6ca28f68fbc1d60199285b474d7e17f/view/movie/M/402330315.mp4')
                     p.card-text This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
                 .card
-                    img(src='http://pic.uuhy.com/uploads/2013/02/20/005-stunning-cityscapes-martin-stavars.jpg', data-toggle='modal', data-target='#myModal', data-video='./includes/10 1-2.mp4')
+                    img(src='http://pic.uuhy.com/uploads/2013/02/20/005-stunning-cityscapes-martin-stavars.jpg', data-toggle='modal', data-target='#myModal', data-video='http://vt1.doubanio.com/201811231248/f6ca28f68fbc1d60199285b474d7e17f/view/movie/M/402330315.mp4')
                     p.card-text This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
 
                 .card
-                    img(src='http://pic.uuhy.com/uploads/2013/02/20/005-stunning-cityscapes-martin-stavars.jpg', data-toggle='modal', data-target='#myModal', data-video='./includes/10 1-2.mp4')
+                    img(src='http://pic.uuhy.com/uploads/2013/02/20/005-stunning-cityscapes-martin-stavars.jpg', data-toggle='modal', data-target='#myModal', data-video='http://vt1.doubanio.com/201811231248/f6ca28f68fbc1d60199285b474d7e17f/view/movie/M/402330315.mp4')
                     p.card-text This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
         #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
             .modal-dialog(role='document')
